alignment corrections

--- a/form.css
+++ b/form.css
@@ -45,6 +45,7 @@ body{
 .heading_bar{
   display: flex;
   flex: 1;
+  width: 100%;
   justify-content: center;
   align-items: center;
   background-color: rgba(208, 228, 27, 0.344);
